argocd/media-server/pinchflat/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: pinchflat
  name: pinchflat
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: pinchflat
  template:
    metadata:
      labels:
        app: pinchflat
    spec:
      containers:
        - name: pinchflat
          image: ghcr.io/kieraneglin/pinchflat:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 250m
              memory: 200Mi
            requests:
              cpu: "1"
              memory: 1Gi
          ports:
            - containerPort: 8888
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8945
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8945
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      restartPolicy: Always
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: truenas-ssd
        resources:
          requests:
            storage: 1Gi
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: downloads
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: truenas-hdd
        resources:
          requests:
            storage: 100Gi
