argocd/media-server/pinchflat/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pinchflat
spec:
  parentRefs:
  - name: cilium-private-gateway
    namespace: cilium
    sectionName: https
  hostnames:
    - pf.yanello.net
  rules:
    - backendRefs:
        - name: pinchflat
          port: 8945
